--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 
 .section {
   width: 100%;
-  padding: 100px 150px;
+  padding: 10% 10%;
   box-sizing: border-box;
 }
 
@@ -20,7 +20,7 @@
 .navbar {
   position: absolute;
   width: 100%;
-  padding: 10px 180px;
+  padding: 2% 6%;
   box-sizing: border-box;
 }
 
@@ -43,6 +43,11 @@
   padding: 10px;
 }
 
+.navbar .navbar-list .list-item.menu-icon {
+  display: none;
+  color: white;
+}
+
 .navbar .navbar-list .list-item a {
   text-decoration: none;
   color: white;
@@ -57,10 +62,7 @@
 .navbar .navbar-list .list-item a.selected {
   color: #ff305b;
 }
-/* 
 
-
-*/
 /* Home Section */
 .home-section {
   background-image: url("../assets/images/header.jpeg");
@@ -74,24 +76,26 @@
 }
 
 .home-section .container {
-  padding: 3vw 3vw;
+  line-height: 100vh;
+  text-align: center;
 }
 
 .home-section .text {
   text-align: center;
   line-height: 1.5;
+  display: inline-block;
 }
 
 .home-section .text .hello {
   font-weight: 500;
   display: inline-block;
-  font-size: 3.5vw;
+  font-size: 20px;
 }
 
 .home-section .text .alex-smith {
   font-weight: 900;
   color: #ff305b;
-  font-size: 7vw;
+  font-size: 70px;
 }
 
 @keyframes title-animation1 {
@@ -126,6 +130,10 @@
   }
 }
 
+.home-section .text .animated-title .static {
+  vertical-align: top;
+}
+
 .home-section .text .animated-title .animated-word1 {
   border-right: #fff 2px solid;
   font-size: 24px;
@@ -150,12 +158,15 @@
 
 /* About Section */
 
+.about-section {
+  padding: 7%;
+}
+
 .about-section .container {
-  padding: 0px 0px 0px 100px;
+  padding: 0px;
 }
 
 .about-section .container .left-column {
-  width: 35%;
   display: inline-block;
   box-sizing: border-box;
   vertical-align: middle;
@@ -219,7 +230,6 @@
 }
 
 .about-section .container .right-column {
-  width: 60%;
   display: inline-block;
   box-sizing: border-box;
   padding-left: 50px;
@@ -249,8 +259,8 @@
 
 .about-section .container .right-column .info-list .list-item {
   display: inline-block;
-  width: 45%;
   padding-block: 10px;
+  font-size: 20px;
 }
 
 .about-section .container .right-column .info-list .list-item span {
@@ -263,12 +273,12 @@
 }
 
 .about-section .button {
-  padding: 20px 10px;
+  padding: 10px 15px;
   margin-inline: 10px;
   background-color: #ff305b;
   border: hidden;
   border-radius: 5px;
-  width: 150px;
+  /* width: 150px; */
   color: white;
   text-decoration: none;
   float: left;
@@ -307,7 +317,6 @@
 }
 
 .services-section .cards-container .card {
-  width: 25%;
   display: inline-block;
   box-sizing: border-box;
   padding: 15px;
@@ -351,16 +360,33 @@
 }
 
 .portfolio-section .container {
-  padding-inline: 20px;
+  /* padding-inline: 20px; */
+}
+
+.portfolio-section .container .sorting .sorting-list {
+  list-style: none;
+}
+
+.portfolio-section .container .sorting .sorting-list a {
+  color: black;
+  text-decoration: none;
+}
+
+.portfolio-section .container .sorting .sorting-list .list-item {
+  display: inline-block;
+  padding-inline: 10px;
+}
+
+.portfolio-section .container .sorting .sorting-list .selected {
+  color: #ff305b;
 }
 
 .portfolio-section .cards-container {
-  background-color: #999999;
+  /* background-color: #999999; */
 }
 
 .portfolio-section .cards-container .card {
   padding: 20px;
-  width: 33.33333%;
   box-sizing: border-box;
   position: relative;
   float: left;
@@ -409,15 +435,15 @@
 
 .number-section {
   background-color: #f1f1f1;
-  padding: 60px;
+  padding: 5%;
+  text-align: center;
 }
 
 .number-section .container .card {
-  width: 25%;
   padding: 50px;
   box-sizing: border-box;
   text-align: center;
-  float: left;
+  display: inline-block;
 }
 
 .number-section .container .card i {
@@ -443,9 +469,7 @@
 }
 
 .feedback-section .container {
-  padding: 20px;
-  height: 70vh;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .feedback-section .cards-container {
@@ -454,8 +478,6 @@
 
 .feedback-section .cards-container .card {
   text-align: start;
-  width: 800px;
-  height: 300px;
   margin-inline: auto;
   display: inline-block;
   background-color: #f1f1f1;
@@ -465,10 +487,9 @@
 }
 
 .feedback-section .cards-container .card .card-content {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  padding: 30px;
+  z-index: 1;
+  position: relative;
+  padding: 4%;
 }
 
 .feedback-section .cards-container .card .triangle {
@@ -482,18 +503,20 @@
 }
 
 .feedback-section .cards-container .card .img {
-  float: left;
+  display: inline-block;
+  vertical-align: top;
+  text-align: center;
 }
 
 .feedback-section .cards-container .card .img img {
+  height: 100px;
   border-radius: 50%;
-  width: 130px;
 }
 
 .feedback-section .cards-container .card .text {
-  float: left;
-  width: 70%;
+  display: inline-block;
   padding-left: 20px;
+  box-sizing: border-box;
 }
 
 .feedback-section .cards-container .card .text .name {
@@ -523,16 +546,16 @@
 }
 
 .feedback-section .container .circle-border {
-  height: 20px;
-  width: 20px;
+  height: 10px;
+  width: 10px;
   border: 2px solid #ff305b;
   border-radius: 50%;
   display: inline-block;
 }
 
 .feedback-section .container .circle-solid {
-  height: 20px;
-  width: 40px;
+  height: 10px;
+  width: 20px;
   background-color: #ff305b;
   border: 2px solid #ff305b;
   border-radius: 100px;
@@ -547,16 +570,15 @@
 }
 
 .blog-section .cards-container .card {
-  width: 33.3333%;
   box-sizing: border-box;
   float: left;
   text-align: start;
-
   padding: 20px;
 }
 
 .blog-section .cards-container .card .card-image {
   font-size: 0;
+  position: relative;
 }
 
 .blog-section .cards-container .card .card-image img {
@@ -564,7 +586,10 @@
 }
 .blog-section .cards-container .card .card-image iframe {
   width: 100%;
-  height: 205.788px;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .blog-section .cards-container .card .card-text {
@@ -600,16 +625,28 @@
 }
 
 .contact-section .container {
-  padding-inline: 300px;
+  padding-inline: 5%;
 }
 
 .contact-section .form {
-  text-align: center;
+  margin-inline: auto;
+  display: inline-block;
 }
 
-.contact-section .form #name,
+.contact-section .form .name-mail {
+  width: 100%;
+  font-size: 0;
+}
+
+.contact-section .form #name {
+  box-sizing: border-box;
+  height: 40px;
+  border: 1px solid #c0bebe;
+  padding: 5px;
+  margin-right: 1%;
+}
+
 .contact-section .form #email {
-  width: 49%;
   box-sizing: border-box;
   height: 40px;
   border: 1px solid #c0bebe;
@@ -617,14 +654,14 @@
 }
 
 .contact-section .form #subject {
-  width: 600px;
+  width: 100%;
   height: 40px;
   border: 1px solid #c0bebe;
   padding: 5px;
 }
 
 .contact-section .form #message {
-  width: 600px;
+  width: 100%;
   height: 40px;
   border: 1px solid #c0bebe;
   padding: 5px;
@@ -635,10 +672,12 @@
 }
 
 .contact-section .button {
-  padding: 20px 10px;
+  padding: 15px 20px;
   background-color: #ff305b;
   border: hidden;
-  border-radius: 10px;
+  border-radius: 5px;
+  text-transform: uppercase;
+  color: white;
 }
 
 .contact-section .button:hover {
@@ -648,10 +687,12 @@
 /* footer */
 
 .footer-section {
-  background-color: #555555;
+  background-color: #282828;
+  padding: 5% 5%;
 }
 
 .footer-section .container {
+  color: white;
   text-align: center;
 }
 
@@ -661,7 +702,11 @@
   margin-bottom: 20px;
 }
 
-.footer-section .container .span {
+.footer-section .container i:hover {
+  color: #ff305b;
+}
+
+.footer-section .container p a {
   color: #ff305b;
   text-decoration: none;
 }
